<resources>
    <string name="app_name">FitTracker</string>
    <string name="details">Workout details:</string>
    <string name="history">Workout history:</string>
    <string name="goBack">Go back</string>
    <string name="benchPress">Bench Press</string>
    <string name="overheadPress">Overhead Press</string>
    <string name="saveEx">Save Exercise</string>
    <string name="auth">Authentication</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string-array name="run_distances">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>