<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include2"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBench"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/benchPress"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnOverheadPress"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/overheadPress"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        android:layout_margin="20dp"/>

    <com.example.projectjava.UI.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        layout="@layout/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
